# ps1

./: README.md  TODO.org  ps1.cabal  stack.yaml
app/: Main.hs
src/: ANSIColourLib.hs  GitHellLib.hs  PromptLib.hs
