name:                ps1
version:             0.1.0.0
synopsis:            A git-aware bash prompt
description:         Please see README.md
homepage:            https://github.com/apauley/ps1#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas Pauley
maintainer:          andreas@pauley.org.za
copyright:           2016 Andreas Pauley
category:            Command Line
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PromptLib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ps1
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  if !os(osx)
    ghc-options:       -static -optc-static -optl-static

  build-depends:       base
                     , turtle >= 1.2.8 && < 1.3
                     , text >= 1.2.2
                     , ps1
                     , git-hell
                     , hsh
                     , foldl >= 1.2.1
                     , time
  default-language:    Haskell2010

test-suite ps1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ps1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/apauley/ps1
